--- a/index.html
+++ b/index.html
@@ -32,27 +32,158 @@
 						</div>
 					</div>
 					<div class="logo-container col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-6 col-xs-offset-3"><img src="assets/images/split_bill_w.png" /></div>
-					<video id="promo-video">
+					<!--<video id="promo-video">
 						<source src="test.mp4" type="video/mp4">
-					</video>
+					</video>-->
 				</div>
 			</div>
 
 			<div class="row section section-02">
 				<div class="col-md-12 offset-md-1">
 					<h1 class="light-weight">ab<span class="text-color-dot"><span></span>o</span>ut</h1>
+					<div>
+						<p>
+						This cross-platform mobile application will effortlessly assist with the task of deciding who will pay what when the bill arrives. After taking a photo of your bill OCR text recognition will create an interface that will be used to claim items and see the total amount you owe. The same interface will be duplicated on everyone around the table's phone and changes will be updated on the different phones in real time.
+						</p>
+					</div>
 				</div>
 			</div>
 
 			<div class="row section section-03">
 				<div class="col-md-12 offset-md-1">
 					<h1 class="light-weight">team</h1>
+					<div>
+						<h2>Duart Breedt</h2>
+						<div class="circle-avatar" style="background-image:url(team-images/duart.jpg)">
+						</div>
+						<div>
+							<span>Email</span>
+							<p>u15054692@tuks.co.za</p>
+						</div>
+						<div>
+							<span>Degree</span>
+							<p>B.IS Multimedia</p>
+						</div>
+						<div>
+							<a href="https://github.com/DuartBreedt" target="_blank">GitHub</a>
+						</div>
+						<div>
+							<a href="https://www.linkedin.com/in/duart-breedt-9a3429b7/" target="_blank">LinkedIn</a>
+						</div>
+					</div>
+
+					<div>
+						<h2>Linda Potgieter</h2>
+						<div class="circle-avatar" style="background-image:url(team-images/linda.jpg)">
+						</div>
+						<div>
+							<span>Email</span>
+							<p>u14070091@tuks.co.za</p>
+						</div>
+						<div>
+							<span>Degree</span>
+							<p>B.Sc IT Genetics</p>
+						</div>
+						<div>
+							<a href="https://github.com/LindaPotgieter" target="_blank">GitHub</a>
+						</div>
+						<!--<div>
+							<a href="" target="_blank">LinkedIn</a>
+						</div>-->
+					</div>
+
+					<div>
+						<h2>Matthew Perry</h2>
+						<div class="circle-avatar" style="background-image:url(team-images/matthew.jpg)">
+						</div>
+						<div>
+							<span>Email</span>
+							<p>u13017030@tuks.co.za</p>
+						</div>
+						<div>
+							<span>Degree</span>
+							<p>B.Sc IT GIS</p>
+						</div>
+						<div>
+							<a href="https://github.com/perrymatthew/" target="_blank">GitHub</a>
+						</div>
+						<div>
+							<a href="https://www.linkedin.com/in/matthew-perry-754b5471/" target="_blank">LinkedIn</a>
+						</div>
+					</div>
+
+					<div>
+						<h2>Mia Gerber</h2>
+						<div class="circle-avatar" style="background-image:url(team-images/mia.jpg)">
+						</div>
+						<div>
+							<span>Email</span>
+							<p>u15016502@tuks.co.za</p>
+						</div>
+						<div>
+							<span>Degree</span>
+							<p>B.IS Multimedia</p>
+						</div>
+						<div>
+							<a href="https://github.com/vossca/" target="_blank">GitHub</a>
+						</div>
+						<div>
+							<a href="https://www.linkedin.com/in/mia-gerber-6b6b7713a/" target="_blank">LinkedIn</a>
+						</div>
+					</div>
+
+					<div>
+						<h2>Wanrick Willemse</h2>
+						<div class="circle-avatar" style="background-image:url(team-images/wanrick.jpg)">
+						</div>
+						<div>
+							<span>Email</span>
+							<p>29560617@tuks.co.za</p>
+						</div>
+						<div>
+							<span>Degree</span>
+							<p>B.IS Multimedia</p>
+						</div>
+						<div>
+							<a href="https://github.com/wanrick/" target="_blank">GitHub</a>
+						</div>
+						<div>
+							<a href="https://www.linkedin.com/in/wanrick-willemse-b0b06591/" target="_blank">LinkedIn</a>
+						</div>
+					</div>
 				</div>
 			</div>
 
 			<div class="row section section-04">
 				<div class="col-md-12 offset-md-1">
 					<h1 class="light-weight"><span class="text-color-dot"><span></span>o</span>ther</h1>
+					<div>
+						<h2>Team Links</h2>
+						<div>
+							<h3>Repositories</h3>
+							<div>
+								<a href="https://github.com/COS301-brute-force" target="_blank"><p>Team Repository</p></a>
+							</div>
+							<div>
+								<a href="https://github.com/perrymatthew/Brute-Force#boards" target="_blank"><p>Scrumboard</p></a>
+							</div>
+						</div>
+						<div>
+							<h3>Documentation</h3>
+							<div>
+								<a href="https://docs.google.com/document/d/1X_n8wSRZRA6gd6w0bAdL9MlCfc-9askTlykC-DxlNTQ/edit?usp=sharing" target="_blank"><p>SRS Document</p></a>
+							</div>
+							<div>
+								<a href="https://docs.google.com/document/d/1jC8d4RIOwWje-8IhdSdYQF7me1rOJH65hY8QojmwxvY/edit?usp=sharing" target="_blank"><p>Progress Report</p></a>
+							</div>
+						</div>
+						<div>
+							<h3>Other</h3>
+							<div>
+								<a href="https://COS301-BruteForce.slack.com" target="_blank"><p>Slack</p></a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 
