Added basic information, no styling

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 				<div class="col-md-12 offset-md-1">
 					<h1 class="light-weight">ab<span class="text-color-dot"><span></span>o</span>ut</h1>
 					<div>
+						<div>
+							<img src="logo-images/brute-force-logo.png" title="Brute Force" alt="Brute Force logo"/>
+							<img src="logo-images/splitbill-logo.png" title="Splitbill" alt="Splitbill logo"/>
+						</div>
 						<p>
 						This cross-platform mobile application will effortlessly assist with the task of deciding who will pay what when the bill arrives. After taking a photo of your bill OCR text recognition will create an interface that will be used to claim items and see the total amount you owe. The same interface will be duplicated on everyone around the table's phone and changes will be updated on the different phones in real time.
 						</p>
@@ -52,6 +56,9 @@
 			<div class="row section section-03">
 				<div class="col-md-12 offset-md-1">
 					<h1 class="light-weight">team</h1>
+					<div>
+						<img src="team-images/team.jpg" title="Team group photo" alt="Team group photo"/>
+					</div>
 					<div>
 						<h2>Duart Breedt</h2>
 						<div class="circle-avatar" style="background-image:url(team-images/duart.jpg)">
@@ -70,6 +77,20 @@
 						<div>
 							<a href="https://www.linkedin.com/in/duart-breedt-9a3429b7/" target="_blank">LinkedIn</a>
 						</div>
+						<div>
+							<h3>About Me</h3>
+							<div>
+								<p>
+				                I take pride in making all my work aesthetically pleasing and believe it is of the utmost importance that all user-centered products should have great UI and UX design.
+				                <br/><br/>
+				                I think of myself as a perfectionistic completionist. Characteristically, I work persistently on any endeavour I undertake until I have produced a quality product I am proud of.
+				                <br/><br/>
+				                I find that if I am not learning, I am bored. Therefore, I strive to seek out challenges which push my limits and force me to contend with steep learning curves.
+				                <br/><br/>
+				                I strongly believe that if you ever wish to be great at what you do you should ensure you are never the smartest person in the room. People are vessels of knowledge and will teach you more than you would like to know if you let them.
+            					</p>
+							</div>
+						</div>
 					</div>
 
 					<div>
@@ -87,9 +108,18 @@
 						<div>
 							<a href="https://github.com/LindaPotgieter" target="_blank">GitHub</a>
 						</div>
-						<!--<div>
-							<a href="" target="_blank">LinkedIn</a>
-						</div>-->
+						<div>
+							<h3>About Me</h3>
+							<div>
+								<p>
+				            	I am always up for a challenge. Nothing great is worth achieving by taking the easy way out. I am always analyzing the problem to ensure I find the most effective but easiest to understand solution. 
+						        <br/><br/>
+								I am always willing to find a solution to a problem on my own, but I know when I need to ask for assistance. Struggling alone is not an option when project quality is at stake. Strong believer in the use and creation of complete and concise documentation for any project. 
+								<br/><br/>
+								I perform well under pressure, but ensure the pressure placed on myself with regards to my studies is at minimum by setting milestones and achieving them within a set timeframe. No one likes sloppy last minute work, and clients deserve more than that, even if it is only a teaching assistant assessing the work.
+            					</p>
+							</div>
+						</div>
 					</div>
 
 					<div>
@@ -109,6 +139,16 @@
 						</div>
 						<div>
 							<a href="https://www.linkedin.com/in/matthew-perry-754b5471/" target="_blank">LinkedIn</a>
+						</div>
+						<div>
+							<h3>About Me</h3>
+							<div>
+								<p>
+				                I am passionate about software development. Being able to write code to solve a problem excites me. I am driven to be able to learn new technologies and be able to use them to create software and solve problems. I am a critical thinker that thrives when given something complex to assess and work on.
+				                <br/></br/>
+				                I am able to work well under pressure and ensure that the final result exceeds expectations. I can adapt to the situation so that I can perform at my peak. Learning and gathering experience are very important aspects in my life.
+            					</p>
+							</div>
 						</div>
 					</div>
 
@@ -130,6 +170,20 @@
 						<div>
 							<a href="https://www.linkedin.com/in/mia-gerber-6b6b7713a/" target="_blank">LinkedIn</a>
 						</div>
+						<div>
+							<h3>About Me</h3>
+							<div>
+								<p>
+				            	Logical thinking and reasoning has always come naturally to me, I enjoy being posed a question or problem and then left to use the tools at my disposal to answer and/or solve it. 
+				            	<br/><br/>
+								I am stubborn in the pursuit of success, which leads to many hours being sunk into troubleshooting if a product or deliverable does not meet all the requirements. 
+								<br/><br/>
+								I am skilled in both the technical and creative side of development, in other words, formulating somewhat unconventional solutions and then executing them in a professional manner.
+								<br/><br/>
+								I believe that my team members and I are capable of making this project a success through our already existing abilities as well as sheer tenacity.
+            					</p>
+							</div>
+						</div>
 					</div>
 
 					<div>
@@ -149,6 +203,20 @@
 						</div>
 						<div>
 							<a href="https://www.linkedin.com/in/wanrick-willemse-b0b06591/" target="_blank">LinkedIn</a>
+						</div>
+						<div>
+							<h3>About Me</h3>
+							<div>
+								<p>
+				            	I’ve always enjoyed finding a solution to a challenge. I believe that anything can be overcome if it is approached systematically and with determination. 
+				            	<br/><br/>
+								Meticulous design and thorough planning should be at the forefront of tackling a problem. I try to establish a vision and use it as a roadmap when creating something. I consider a product successful when I can see it is of a high standard.
+								<br/><br/>
+								I am adaptable and can function well under pressure. When it comes to my work, there is no settling for second best.
+								<br/><br/>
+								Developing high-quality software expects no less.
+            					</p>
+							</div>
 						</div>
 					</div>
 				</div>
