Added images, no styling

--- a/index.html
+++ b/index.html
@@ -226,6 +226,24 @@
 				<div class="col-md-12 offset-md-1">
 					<h1 class="light-weight"><span class="text-color-dot"><span></span>o</span>ther</h1>
 					<div>
+						<h2>User manuals</h2>
+						<div>
+							<a href="https://github.com/COS301-brute-force/Platypus-Mobile/wiki/User-Manual" target="_blank"><h3>Module: Mobile</h3>
+							<img src="logo-images/splitbill-circular-logo.png"/>
+							</a>
+						</div>
+						<div>
+							<a href="https://github.com/COS301-brute-force/Platypus-API/wiki" target="_blank"><h3>Module: API</h3>
+							<img src="logo-images/splitbill-circular-logo.png"/>
+							</a>
+						</div>
+						<div>
+							<a href="https://github.com/COS301-brute-force/Platypus-OCR/wiki" target="_blank"><h3>Module: OCR</h3>
+							<img src="logo-images/splitbill-circular-logo.png"/>
+							</a>
+						</div>
+					</div>
+					<div>
 						<h2>Team Links</h2>
 						<div>
 							<h3>Repositories</h3>
