Added experience/previous projects part

--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
             					</p>
 							</div>
 						</div>
+						<div>
+							<h3>Experience/Previously completed projects</h3>
+							<div>
+								<p>
+				                Developed a website for Caelum Technologies
+				                <br/>
+				                Developing a website for the National Field Trial Association
+				                <br/>
+				                Developing a website for TallTrees Learning Community
+				                <br/>
+				                Developed an ecommerce website as an undergraduate based project <a href="http://77-breedt.000webhostapp.com" class="btn btn-default btn-custom" target="_blank">View</a>
+				            	</p>
+							</div>
+						</div>
 					</div>
 
 					<div>
@@ -118,6 +132,14 @@
 								<br/><br/>
 								I perform well under pressure, but ensure the pressure placed on myself with regards to my studies is at minimum by setting milestones and achieving them within a set timeframe. No one likes sloppy last minute work, and clients deserve more than that, even if it is only a teaching assistant assessing the work.
             					</p>
+							</div>
+						</div>
+						<div>
+							<h3>Experience/Previously completed projects</h3>
+							<div>
+								<p>
+                				Redesign of mobile application to comply with HCI standards as undergraduate project
+                				</p>
 							</div>
 						</div>
 					</div>
@@ -148,6 +170,16 @@
 				                <br/></br/>
 				                I am able to work well under pressure and ensure that the final result exceeds expectations. I can adapt to the situation so that I can perform at my peak. Learning and gathering experience are very important aspects in my life.
             					</p>
+							</div>
+						</div>
+						<div>
+							<h3>Experience/Previously completed projects</h3>
+							<div>
+								<p>
+				                HCI task to redesign an app to improve user experience.
+				                <br/>
+				                Programmed an FPGA board using VHDL.
+				            	</p>
 							</div>
 						</div>
 					</div>
@@ -184,6 +216,16 @@
             					</p>
 							</div>
 						</div>
+						<div>
+							<h3>Experience/Previously completed projects</h3>
+							<div>
+								<p>
+				                University of Pretoria’s EBIT Week IT team<br/>
+								eCommerce website (both front and backend develvopment) as undergraduate project<br/>
+								Teaching Assistant for the Computer Science department
+								</p>
+							</div>
+						</div>
 					</div>
 
 					<div>
@@ -216,6 +258,16 @@
 								<br/><br/>
 								Developing high-quality software expects no less.
             					</p>
+							</div>
+						</div>
+						<div>
+							<h3>Experience/Previously completed projects</h3>
+							<div>
+								<p>
+				                7 years work experience at a pathology company<br/>
+								eCommerce website as undergraduate project<br/>
+								Tutor for first year webdesign and second year Visual Design
+								</p>
 							</div>
 						</div>
 					</div>
