Added Embedded video

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 						</div>
 					</div>
 					<div class="logo-container col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-6 col-xs-offset-3"><img src="assets/images/split_bill_w.png" /></div>
+					<div id="player"></div>
 					<!-- <video id="promo-video">
 						<source src="assets/videos/Promo.mp4" type="video/mp4">
 					</video> -->
@@ -473,7 +474,9 @@
 		crossorigin="anonymous">
 	</script>
 
+	<script src="https://www.youtube.com/iframe_api"/></script>
 	<script src="js/global.js" /></script>
+	<script src="js/video-controller.js" /></script>
 	<script src="js/scroll-handler.js" /></script>
 	<script src="js/screen-resize-handler.js" /></script>
 </html>
