--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 						</div>
 					</div>
 					<div class="logo-container col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-6 col-xs-offset-3"><img src="assets/images/split_bill_w.png" /></div>
-					<div id="player"></div>
+					<!-- <div id="player"></div> -->
+					<iframe id="player" type="text/html" width="640" height="390"
+  src="http://www.youtube.com/embed/SYeJnMEnclk?enablejsapi=1&origin=https://cos301-brute-force.github.io/split-bill/"
+  frameborder="0"></iframe>
 					<!-- <video id="promo-video">
 						<source src="assets/videos/Promo.mp4" type="video/mp4">
 					</video> -->
@@ -474,7 +477,6 @@
 		crossorigin="anonymous">
 	</script>
 
-	<script src="https://www.youtube.com/iframe_api"/></script>
 	<script src="js/global.js" /></script>
 	<script src="js/video-controller.js" /></script>
 	<script src="js/scroll-handler.js" /></script>
